--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Edabit Question Solve</title>
   </head>
   <body>
-    <script src="prac.js"></script>
+    <script src="String Question/string.js"></script>
   </body>
 </html>
