--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Edabit Question Solve</title>
   </head>
   <body>
-    <script src="String Question/medium.js"></script>
+    <!-- <script src="String Question/medium.js"></script> -->
+    <script src="Arrays Question/Medium.js"></script>
   </body>
 </html>
